# louter

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI_STREAMING_FORMATS.md  INSTALLATION.md  LICENSE  README.md  cabal.project  louter.cabal  nix-shell.sh
.github/workflows/: ci.yml
app/: CLI.hs  Main.hs
docs/: README.md  claude-streaming-api-spec.md  implementation-vs-spec-analysis.md  test-coverage-report.md
docs/debug/: README.md  api-type-error-max-tokens.md  error-map-and-solutions.md  standard-debugging-workflow.md
docs/design/: CONTENT-BASED-ROUTING.md  HYBRID-MODEL-ROUTING.md  README.md  XML-CONVERSION-VERIFICATION.md  XML-TOOL-FORMAT-SUPPORT.md  converter-implementation-status.md  ir-architecture-implementation.md  log-format.md
docs/haskell/: GETTING_STARTED.md  LIBRARY_API.md
docs/issues/: ISSUE-streaming-error.md  README.md  claude-code-integration-issue.md
docs/plans/: FEATURE-ROADMAP.md  README.md  TODO.md  internal-expression-architecture.md
docs/resolved/: 2025-11-24-claude-api-spec-compliance-RESOLVED.md  2025-11-24-comprehensive-claude-streaming-tests-COMPLETE.md  2025-11-25-COMPLETE-SESSION-SUMMARY.md  2025-11-25-claude-code-models-endpoint-RESOLVED.md  2025-11-25-comprehensive-converter-tests-COMPLETE.md  2025-11-25-enhanced-logging-for-debugging-COMPLETE.md  2025-11-25-gemini-backend-converter-COMPLETE.md  2025-11-25-ir-architecture-integration-COMPLETE.md  2025-11-25-ir-converters-implementation-COMPLETE.md  2025-11-25-openai-frontend-converter-COMPLETE.md  2025-11-25-openai-gemini-integration-COMPLETE.md  2025-11-25-session-summary.md  CROSS-PROTOCOL-FIX-SUMMARY.md  CROSS-PROTOCOL-TEST-RESULTS.md  DEBUGGING-NOTES.md  DEBUGGING-SESSION-SUMMARY.md  FINAL-TEST-SUMMARY.md  FUNCTION-CALLING-DEBUG.md  MOCK-SERVER-STATUS.md  MOCK-SERVER-TEST-PLAN.md  MOCK-VS-PUBLIC-COMPARISON.md  README.md
docs/tutorial/: PUBLIC-API-QUICKSTART.md  README.md  TUTORIALS.md  log-replay-tool-usage.md
examples/: README.md  StreamingChat.hs  claude-code-with-gemini.yaml  cloud-apis.yaml  config-mock.toml  config-public-api.toml  config.toml  dual-backend-config.toml  llama-cpp-config.toml  local-llama-server.yaml  multi-backend.yaml  openai-public-config.toml  test-multimodal-config.toml  vision-models.yaml  xml-tools.yaml
haskell/: IMPLEMENTATION_PLAN.md  README.md  stack.yaml
haskell/louter/: louter.cabal
haskell/louter/app/: CLI.hs  Main.hs
haskell/louter/examples/: ParallelToolCalls.hs  SimpleChat.hs
haskell/louter/src/Louter/: Client.hs  Protocol.hs  Types.hs
haskell/louter/src/Louter/Backend/: OpenAIToAnthropic.hs  OpenAIToGemini.hs
haskell/louter/src/Louter/Protocol/: Anthropic.hs  AnthropicConverter.hs  AnthropicStreaming.hs  GeminiConverter.hs  GeminiStreaming.hs  OpenAI.hs
haskell/louter/src/Louter/Streaming/: Classifier.hs  Parser.hs  Processor.hs  XMLStreamProcessor.hs  XMLToolCallParser.hs
haskell/louter/src/Louter/Types/: Request.hs  Response.hs  Streaming.hs  ToolFormat.hs
haskell/openai-mock/: openai-mock.cabal
haskell/openai-mock/app/: Main.hs
openai-mock/: openai-mock.cabal
scripts/: capture-api-responses.sh  capture-audio-response.sh  capture-openai-audio-response.sh  capture-streaming-responses.sh  test-cross-protocol-diagnostics.sh  test-cross-protocol.sh  test-gemini-cli-64k.sh  test-mock-server.sh  test-openai-public.sh  test-public-api.sh  test-routing.sh  test-tool-conversion.sh
src/: backends.rs  config.rs  conversion.rs  diagnostic.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  routing.rs  ui.rs
src/Louter/: Client.hs
src/Louter/Client/: Anthropic.hs  Gemini.hs  OpenAI.hs
src/Louter/Protocol/: AnthropicConverter.hs  AnthropicStreaming.hs  Gemini.hs  GeminiConverter.hs  GeminiStreamingJsonArray.hs
src/Louter/Types/: Request.hs  Response.hs
src/ir/: mod.rs  traits.rs  types.rs
src/ir/converters/: anthropic_frontend.rs  gemini_backend.rs  gemini_frontend.rs  mod.rs  openai_backend.rs  openai_frontend.rs
src/models/: anthropic.rs  common.rs  gemini.rs  mod.rs  openai.rs
src/protocols/: gemini.rs  mod.rs  openai.rs  streaming.rs
src/tests/: fixtures.rs  gemini_protocol_tests.rs  mod.rs  multimedia_integration_tests.rs  openai_protocol_tests.rs  streaming_tests.rs  test_resources.rs
static/: test-ui.html  ui.html
test/: Spec.hs
test-data/: README.md
test-data/gemini/: README.md
test-data/gemini/streaming_function_calling/: request_0.json  request_1.json  response_0.json  response_1.json
test-data/gemini/streaming_jsonarray/: test.sh
test-data/gemini/streaming_long/: log  request.json  response.json
test-data/gemini/streaming_sse/: sample_request.json  test.sh
test-data/openai/streaming_function_calling/: README.md  request.json  test.sh
tests/: QUICKSTART.md  README.md  TEST_SUMMARY.md  api_integration_tests.rs  run_all_tests.py  test-configs.md  test-xml-conversion.sh  test_anthropic_streaming.py  test_anthropic_vision.py  test_config_custom_instructions.rs  test_gemini_frontend.rs  test_gemini_handler_integration.rs  test_gemini_manual.py  test_gemini_non_streaming.py  test_gemini_openai_converters.rs  test_gemini_sse_streaming.py  test_gemini_streaming.py  test_gemini_streaming_jsonarray.py  test_gemini_tool_calling.py  test_gemini_verification.sh  test_ir_converters.rs  test_openai_streaming.py  test_streaming_converters.rs  test_xml_conversion.rs
