[package]
name = "louter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "louter"
path = "src/main.rs"

[[bin]]
name = "log-parser"
path = "src/bin/log-parser.rs"

[[bin]]
name = "mock-server"
path = "src/bin/mock-server.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
async-trait = "0.1"
bytes = "1.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
anyhow = "1.0"
thiserror = "1.0"
eventsource-stream = "0.2"
futures-util = "0.3"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.10"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
async-stream = "0.3"
flate2 = "1.0"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.10"