cabal-version: 2.2
name: louter
version: 0.1.0.0
synopsis: Multi-protocol LLM router and client library
description: Protocol converter library that lets your application connect to any LLM API
             (OpenAI, Gemini, Anthropic) with automatic protocol translation, SSE streaming,
             and function call buffering. Use as library or run as proxy server.
license: MIT
author: Junji Hashimoto
maintainer: junji.hashimoto@gmail.com
category: Web
build-type: Simple

library
  exposed-modules:
      -- Client API (use as library)
      Louter.Client
      Louter.Client.OpenAI
      Louter.Client.Gemini
      Louter.Client.Anthropic
      -- Core protocol conversion
      Louter.Protocol
      Louter.Protocol.OpenAI
      Louter.Protocol.Gemini
      Louter.Protocol.Anthropic
      Louter.Protocol.AnthropicConverter
      Louter.Protocol.AnthropicStreaming
      Louter.Protocol.GeminiConverter
      Louter.Protocol.GeminiStreaming
      -- Streaming infrastructure
      Louter.Streaming.Parser
      Louter.Streaming.Processor
      Louter.Streaming.Classifier
      -- Types
      Louter.Types
      Louter.Types.Request
      Louter.Types.Response
      Louter.Types.Streaming
  other-modules:
      Paths_louter
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-export-lists
               -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , aeson >=2.0
    , attoparsec >=0.14
    , bytestring >=0.11
    , http-client >=0.7
    , http-client-tls >=0.3
    , http-types >=0.12
    , text >=2.0
    , containers >=0.6
    , transformers >=0.5
    , conduit >=1.3
    , conduit-extra >=1.3
    , mtl >=2.2
    , scientific >=0.3
    , unordered-containers >=0.2
    , vector >=0.13
    , warp >=3.3
    , wai >=3.2
    , servant >=0.19
    , servant-server >=0.19

executable louter-server
  main-is: Main.hs
  other-modules:
      Paths_louter
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , louter
    , optparse-applicative >=0.17
    , yaml >=0.11
    , aeson
    , bytestring
    , text
    , wai
    , warp
    , http-types
    , http-client
    , http-client-tls
    , containers
    , unordered-containers
    , conduit
    , transformers
    , mtl
    , vector
    , random

test-suite louter-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ParserSpec
      ClassifierSpec
      ProcessorSpec
      ProtocolSpec
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , louter
    , hspec >=2.10
    , QuickCheck >=2.14
    , aeson
    , bytestring
    , text
